--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <script src="./js/class.js"></script> -->
-    <!-- <script src="./js/classTasks.js"></script> -->
+    <script src="./js/classTasks.js"></script>
     <!-- <script src="./js/inherit.js"></script> -->
-    <script src="./js/inheritTask.js"></script>
+    <!-- <script src="./js/inheritTask.js"></script> -->
     <title>Classes</title>
   </head>
   <body>
