--- a/index.html
+++ b/index.html
@@ -13,5 +13,21 @@
   </head>
   <body>
     <h1>Classes F12 to start</h1>
+    <ol>
+      <li>Automobilis BMW 330 kainuja 9000 Eur</li>
+      <li>Automobilis BMW 330 kainuja 9000 Eur</li>
+    </ol>
+    <table>
+      <tr>
+        <th>id</th>
+        <th>pav</th>
+      </tr>
+      <tbody>
+        <tr>
+          <td>1</td>
+          <td>BMW</td>
+        </tr>
+      </tbody>
+    </table>
   </body>
 </html>
