--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="./js/classTasks2.js"></script>
     <!-- <script src="./js/inherit.js"></script> -->
     <!-- <script src="./js/inheritTask.js"></script> -->
+    <!-- <script src="./js/setGet.js"></script> -->
     <title>Classes</title>
   </head>
   <body>
