--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
   <body>
     <h1>Classes F12 to start</h1>
     <ol>
-      <li>Automobilis BMW 330 kainuja 9000 Eur</li>
-      <li>Automobilis BMW 330 kainuja 9000 Eur</li>
+      <li>Automobilis BMW 330 kainuja 2400 Eur</li>
+      <li>Automobilis Audi A8 kainuja 3350 Eur</li>
+      <li>Automobilis Opel Vectra kainuja 1050 Eur</li>
+      <li>Automobilis MB 600 kainuja 5500 Eur</li>
     </ol>
     <table>
       <tr>
