--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <script src="./js/class.js"></script> -->
     <!-- <script src="./js/classTasks.js"></script> -->
-    <script src="./js/classTasks2.js" defer></script>
+    <!-- <script src="./js/classTasks2.js" defer></script> -->
     <!-- <script src="./js/inherit.js"></script> -->
     <!-- <script src="./js/inheritTask.js"></script> -->
     <!-- <script src="./js/setGet.js"></script> -->
+    <script src="./js/setGetTasks.js"></script>
     <title>Classes</title>
     <style>
       table {
